--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+hr {
+  display: block;
+  border: none;
+  width: 90%;
+  align-items: right;
+  border-top: 1px solid #4D618E;
+  padding: 0;
+  margin-top:-1px;
+  margin-bottom:-0.5px;
+}
+
